--- a/examples/nginx-app/base.yaml
+++ b/examples/nginx-app/base.yaml
@@ -37,7 +37,7 @@ spec:
         app: nginx
     spec:
       containers:
-      - image: nginx:1.17.6
+      - image: docker.iranrepo.ir/nginx:1.17.6
         name: nginx
         ports:
         - containerPort: 80
