--- a/nginx-test.yml
+++ b/nginx-test.yml
@@ -1,7 +1,7 @@
-#apiVersion: v1
-#kind: Namespace
-#metadata:   
-#  name: test-nginx
+apiVersion: v1
+kind: Namespace
+metadata:   
+  name: test-velero
 ---
 apiVersion: v1
 kind: PersistentVolumeClaim
