--- a/values.yml
+++ b/values.yml
@@ -1,6 +1,6 @@
 configuration:
   backupStorageLocation: 
-  - name: minio-aws
+  - name: default
     provider: aws 
     bucket: "velero2" 
     default:
@@ -14,12 +14,12 @@ configuration:
 #cleanUpCRDs: true
 
 initContainers:
-  # - name: velero-plugin-for-csi
-  #   image: velero/velero-plugin-for-csi:v0.5.0
-  #   imagePullPolicy: IfNotPresent
-  #   volumeMounts:
-  #     - mountPath: /target
-  #       name: plugins
+  - name: velero-plugin-for-csi
+    image: velero/velero-plugin-for-csi:v0.5.0
+    imagePullPolicy: IfNotPresent
+    volumeMounts:
+      - mountPath: /target
+        name: plugins
   - name: velero-plugin-for-aws
     image: velero/velero-plugin-for-aws:v1.7.0
     imagePullPolicy: IfNotPresent
@@ -46,8 +46,8 @@ credentials:
       [default]
       aws_access_key_id=minio 
       aws_secret_access_key=minio123
-snapshotsEnabled: fales
-deployNodeAgent: true
+snapshotsEnabled: true
+deployNodeAgent: false
 # IMP
 upgradeCRDs: true
 
